# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
brain_games/: __init__.py  cli.py  game_core.py  game_engine.py  user_interface.py
brain_games/games/: calc.py  even.py  game_calc_engine.py  game_even_engine.py  game_gcd_engine.py  game_prime_engine.py  game_progression_engine.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  main.py  welcome.py
