[tool.poetry]
name = "hexlet-code"
version = "1.0"
description = "Hexlet Python Dev Project 1 Games."
authors = ["MjH.Sakh <48555070+mjh-sakh@users.noreply.github.com>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education"
]
repository = "https://github.com/mjh-sakh/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.welcome:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
